--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above three-line code must be placed on it -->
-  <title>標題</title>
+  <title>幸運豬骰子遊戲</title>
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -35,24 +35,17 @@
 
 
   <div class="container">
-
-
-
-    <div class="row">
-
-      <div class="h-100 col-md-6 player0"></div>
-
-      <div class="col-md-6 player1"></div>
-
-
-
+    <div class="row h1" style="text-align:center;">幸運豬骰子遊戲</div>
+    <div class="row h2">勝利次數：<span class="winnums player1">0</span>
 
     </div>
 
 
+    <div class="row" style="height: 50px;">
+      <p class="h6">喔喔</p>
+    </div>
 
 
-  </div>
 
 
 
