--- a/index.html
+++ b/index.html
@@ -35,8 +35,24 @@
 
 
   <div class="container">
-    <div class="row h1" style="text-align:center;">幸運豬骰子遊戲</div>
-    <div class="row h2">勝利次數：<span class="winnums player1">0</span>
+    <div class="row text-center">
+      <div class="col-md-4 col-md-offset-4 h1" style="background-color:rgba(245, 245, 245, 0.767);">幸運豬骰子遊戲</div>
+    </div>
+    <div class="row h1" style="background-color: rgba(245, 245, 245, 0.767);">
+
+
+
+      目標分數：200</div>
+
+
+
+
+    <div class="row h2" style="background-color: rgba(245, 245, 245, 0.767);">
+
+      <div class="col-md-6">勝利次數：<span class="winnums player1">0</span></div>
+      <div class="col-md-6"></div>勝利次數：<span class="text-left winnums player2">0</span>
+
+
 
     </div>
 
@@ -49,7 +65,7 @@
 
 
 
-
+  </div>
 </body>
 
 </html>
