--- a/index.html
+++ b/index.html
@@ -34,31 +34,39 @@
 
 
 
-  <div class="container">
+  <div class="container" style="background-color:rgba(245, 245, 245, 0.767);">
     <div class="row text-center">
-      <div class="col-md-4 col-md-offset-4 h1" style="background-color:rgba(245, 245, 245, 0.767);">幸運豬骰子遊戲</div>
+      <div class="col-md-4 col-md-offset-4 h1" style="color:rgba(34, 83, 216);
+      background-color: cornsilk;">
+        幸運豬骰子遊戲</div>
     </div>
-    <div class="row h1" style="background-color: rgba(245, 245, 245, 0.767);">
+    <div class="row h2 text-center">目標分數：200</div>
 
 
+    <div class="row h3">
 
-      目標分數：200</div>
-
-
-
-
-    <div class="row h2" style="background-color: rgba(245, 245, 245, 0.767);">
-
-      <div class="col-md-6">勝利次數：<span class="winnums player1">0</span></div>
-      <div class="col-md-6"></div>勝利次數：<span class="text-left winnums player2">0</span>
+      <div class="col-md-6 text-center" style="">勝利場數：<span class="winnums player1">0</span></div>
+      <div class="col-md-6 text-center">勝利場數：<span class="winnums player2">0</span></div>
 
 
 
     </div>
 
 
-    <div class="row" style="height: 50px;">
-      <p class="h6">喔喔</p>
+    <div class="row playerID text-center rounded"
+      style="background-color:rgba(218, 63, 158, 0.993); color:rgba(255, 248, 220, 0.884);border-radius: 25px; ">
+      <div class="col-md-6 h3 player1" style="height:25px;">玩家1</div>
+      <div class="col-md-6 h3 player2" style="height:25px;">玩家2</div>
+    </div>
+    <div class="row h2 text-center" style="height: 30px;">
+      Score
+    </div>
+    <div class="row displayScore" style="height: 15rem;">
+      <div class="col-md-6 scorePlayer1" style="height:100%"></div>
+      <div class="col-md-6 scorePlayer2" style="height:100%"></div>
+    </div>
+    <div class="row" style="height:15rem;">
+
     </div>
 
 
