--- a/index.html
+++ b/index.html
@@ -36,19 +36,20 @@
 
 
 
+
   <div class="container" style="background-color:rgba(245, 245, 245, 0.767);">
-    <div class="row text-center">
-      <div class="col-md-4 col-md-offset-4 h1" style="color:rgba(34, 83, 216);
-      background-color: cornsilk;">
-        幸運豬骰子遊戲</div>
+    <div class="row text-center text-shadow">
+      幸運豬骰子遊戲
     </div>
     <div class="row h2 text-center">目標分數：200</div>
 
 
     <div class="row h3">
 
-      <div class="col-md-6 text-center" style="">勝利場數：<span class="winnums player1">0</span></div>
-      <div class="col-md-6 text-center">勝利場數：<span class="winnums player2">0</span></div>
+      <div class="col-md-6 text-center text-shadowblack" style="font-size:30px;">勝利場數：<span
+          class="winnums player1">0</span></div>
+      <div class="col-md-6 text-center text-shadowblack" style="font-size: 30px;">勝利場數：<span
+          class="winnums player2">0</span></div>
 
 
 
@@ -63,14 +64,26 @@
     <div class="row h2 text-center" style="height: 30px;">
       Score
     </div>
-    <div class="row displayScore" style="height: 15rem;">
+    <div class="row displayScore" style="height: 12rem;">
       <div class="col-md-6 scorePlayer1" style="height:100%"></div>
       <div class="col-md-6 scorePlayer2" style="height:100%"></div>
     </div>
-    <div class="row" style="height:15rem;">
+    <div class="row" style="height:20rem;">
 
-      <button class="btn hold">Hold！</button>
+      <button class="btn hold" style="position: absolute;left:15%;">Hold！</button>
+      <button class="btn roll" style="position: relative;left:50%;transform: translate(-50%,-50%);">🎲 Roll the
+        dice</button>
+      <button class="btn hold" style="position: absolute;right:15%;">Hold！</button>
+
     </div>
+
+
+
+
+
+
+
+
 
 
 
