--- a/index.html
+++ b/index.html
@@ -40,15 +40,27 @@
 
 
   <div class="container" style="background-color:rgba(245, 245, 245, 0.767);">
+
+    <!-- 規則說明 -->
+    <button class="shape-ex4 pull-right show-guide">規則說明
+
+
+    </button>
+
+
+
     <!-- 重新開始按鈕 -->
-    <button class="shape-ex1" style="position: absolute;">重新開始</button>
+    <button class=" shape-ex1" style="position: absolute;">重新開始</button>
 
 
-    <div class="row text-center text-shadow">
+    <div class="text-center text-shadow center-block" style="width:fit-content;">
       Pig-Game
     </div>
-    <div class="row h2 text-center">目標分數：200</div>
 
+    <center>
+      <div class=" row h2 text-center">目標分數：200
+      </div>
+    </center>
     <!-- 勝利場數 -->
     <div class="row h3">
 
@@ -85,17 +97,17 @@
     <div class="row">
       <center>
 
-        <div class="col-md-4"><button class="btn hold">Hold!</button></div>
+        <div class="col-md-4"><button class="btnpink btnhold">Hold!</button></div>
 
       </center>
 
       <center>
-        <div class="col-md-4"> <button class="btn roll">🎲 擲出骰子</button></div>
+        <div class="col-md-4"> <button class="btnpink btnroll">🎲 擲出骰子</button></div>
       </center>
 
       <div class="col-md-4">
 
-        <center><button class="btn hold">
+        <center><button class="btnpink btnhold">
 
 
 
