--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!--[endif]-->
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="materials.css">
-  <script src="script.js"></script>
+
 
 
 
@@ -42,10 +42,8 @@
   <div class="container" style="background-color:rgba(245, 245, 245, 0.767);">
 
     <!-- 規則說明 -->
-    <button class="shape-ex4 pull-right show-guide">規則說明
+    <button class="shape-ex4 pull-right show-guide">規則說明</button>
 
-
-    </button>
 
 
 
@@ -97,17 +95,17 @@
     <div class="row">
       <center>
 
-        <div class="col-md-4"><button class="btnpink btnhold">Hold!</button></div>
+        <div class="col-md-4"><button class="btn btnpink btnhold">Hold!</button></div>
 
       </center>
 
       <center>
-        <div class="col-md-4"> <button class="btnpink btnroll">🎲 擲出骰子</button></div>
+        <div class="col-md-4"> <button class="btn btnpink btnroll">🎲 擲出骰子</button></div>
       </center>
 
       <div class="col-md-4">
 
-        <center><button class="btnpink btnhold">
+        <center><button class="btn btnpink btnhold">
 
 
 
@@ -143,19 +141,23 @@
         </div>
       </div>
 
-
-
-
-
-
-
-
-
-
-      <center>
-        <p>create by <a href="https://github.com/qew4476">@State-yang</a></p>
-      </center>
     </div>
+
+    <center>
+      <p>create by <a href="https://github.com/qew4476">@State-yang</a></p>
+    </center>
+
+
+  </div>
+
+
+
+
+
+
+
+  <script src="script.js"></script>
+
 </body>
 
 </html>
