--- a/index.html
+++ b/index.html
@@ -41,14 +41,43 @@
 
   <div class="container" style="background-color:rgba(245, 245, 245, 0.767);">
 
-    <!-- 規則說明 -->
-    <button class="shape-ex4 pull-right show-guide">規則說明</button>
+
 
 
 
 
     <!-- 重新開始按鈕 -->
     <button class=" shape-ex1" style="position: absolute;">重新開始</button>
+
+
+    <!-- 教學說明Modal -->
+    <button type="button" class="shape-ex4 pull-right" data-toggle="modal" data-target="#myModal">規則說明</button>
+    <div class="modal" id="myModal">
+      <div class="modal-dialog ">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h4 class="modal-title">規則說明</h4>
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+          </div>
+          <div class="modal-body">
+            <p>Modal body text goes hereModal body text goes hereModal body text goes hereModal body text goes hereModal
+              body text goes hereModal body text goes hereModal body text goes hereModal body text goes hereModal body
+              text goes hereModal body text goes hereModal body text goes hereModal body text goes hereModal body text
+              goes hereModal body text goes hereModal body text goes hereModal body text goes hereModal body text goes
+              hereModal body text goes hereModal body text goes hereModal body text goes hereModal body text goes
+              hereModal body text goes hereModal body text goes hereModal body text goes hereModal body text goes
+              hereModal body text goes here.</p>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">關閉 </button>
+            <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+          </div>
+        </div>
+      </div>
+
+    </div>
+
+
 
 
     <div class="text-center text-shadow center-block" style="width:fit-content;">
@@ -122,30 +151,31 @@
 
 
 
-        <div class="col-md-4 box-shadow" style="font-weight: bold; font-size: large;">
+        <div class="col-md-4 box-shadow" style="font-weight: bold; font-size: large; height: 160px;">
           <div>當回合分數</div>
 
           <div class="h3 curScore2">0</div>
         </div>
 
 
-        <div class="col-md-4 box-shadow"><img class="dice" src="dice-1.png" style="width: 30%;"></div>
+        <div class="col-md-4 box-shadow" style="height: 160px;"><img class="dice" src="dice-1.png" style="width: 30%; ">
+          <center>
+            <p style="margin-top: 50px;">create by <a href="https://github.com/qew4476">@State-yang</a></p>
+          </center>
+
+        </div>
 
 
 
 
 
-        <div class="col-md-4 box-shadow" style="font-weight: bold; font-size: large">當回合分數
+        <div class="col-md-4 box-shadow" style="font-weight: bold; font-size: large; height: 160px;">當回合分數
 
           <div class="h3 curScore1">0</div>
         </div>
       </div>
 
     </div>
-
-    <center>
-      <p>create by <a href="https://github.com/qew4476">@State-yang</a></p>
-    </center>
 
 
   </div>
