--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
     <div class="row displayScore text-center" style="height: 12rem; 
       ">
       <span id="score--0" class="col-md-4 text-shadowblack scorePlayer1"
-        style="height:12rem;line-height:12rem;">50</span>
+        style="height:12rem;line-height:12rem;">0</span>
       <span id="score--1" class="col-md-4 col-md-offset-4 text-shadowblack scorePlayer2"
-        style="height:12rem;line-height:12rem;">25</span>
+        style="height:12rem;line-height:12rem;">0</span>
     </div>
 
 
@@ -128,7 +128,7 @@
     <div class="row">
       <center>
 
-        <div id="btn-hold--0" class="col-md-4"><button class="btn btnpink">Hold!</button></div>
+        <div class="col-md-4"><button class="btn btnpink btn-hold">Hold!</button></div>
 
       </center>
 
@@ -138,7 +138,7 @@
 
       <div class="col-md-4">
 
-        <center><button id="btn-hold--1" class="btn btnpink">
+        <center><button class="btn btnpink btn-hold">
 
             Hold！</button></center>
 
@@ -154,7 +154,7 @@
           style="font-weight: bold; font-size: large; height: 160px;">
           <div>當回合分數</div>
 
-          <div class="h3" id="current--0">10</div>
+          <div class="h3" id="current--0">0</div>
         </div>
 
         <div class="col-md-4 box-shadow" style="height: 160px;">
@@ -166,7 +166,7 @@
 
         <div class="col-md-4 box-shadow current-label" style="font-weight: bold; font-size: large; height: 160px;">當回合分數
 
-          <div class="h3" id="current--1">5</div>
+          <div class="h3" id="current--1">0</div>
         </div>
       </div>
 
