--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 
     <!-- 重新開始按鈕 -->
-    <button id="btn--restart" class=" shape-ex1" style="position: absolute;">重新開始</button>
+    <button id="btn-new" class="shape-ex1" style="position: absolute;">重新開始</button>
 
 
     <!-- 教學說明Modal -->
@@ -84,7 +84,7 @@
 
 
     <div class="text-center text-shadow center-block" style="width:fit-content;">
-      Pig-Game
+      幸運豬骰
     </div>
 
     <center>
@@ -150,8 +150,7 @@
       <!-- 擲骰子畫面、當回合分數顯示 -->
       <div class="row text-center" style="height: 200px;">
 
-        <div class="col-md-4 box-shadow current-label activeplayer"
-          style="font-weight: bold; font-size: large; height: 160px;">
+        <div class="col-md-4 box-shadow current-label" style="font-weight: bold; font-size: large; height: 160px;">
           <div>當回合分數</div>
 
           <div class="h3" id="current--0">0</div>
