all finished except guide overlay

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above three-line code must be placed on it -->
-  <title>Pig-Game</title>
+  <title>幸運豬骰</title>
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -47,7 +47,7 @@
 
 
     <!-- 重新開始按鈕 -->
-    <button id="btn-new" class="shape-ex1" style="position: absolute;">重新開始</button>
+    <button id="btn-new" class="shape-ex1 " style="position: absolute;">重新開始</button>
 
 
     <!-- 教學說明Modal -->
