--- a/index.html
+++ b/index.html
@@ -60,15 +60,18 @@
             <button type="button" class="close" data-dismiss="modal">&times;</button>
           </div>
           <div class="modal-body">
-            <p>Modal body text goes hereModal body text goes hereModal body text goes hereModal body text goes hereModal
-              body text goes hereModal body text goes hereModal body text goes hereModal body text goes hereModal body
-              text goes hereModal body text goes hereModal body text goes hereModal body text goes hereModal body text
-              goes hereModal body text goes hereModal body text goes hereModal body text goes hereModal body text goes
-              hereModal body text goes hereModal body text goes hereModal body text goes hereModal body text goes
-              hereModal body text goes hereModal body text goes hereModal body text goes hereModal body text goes
-              hereModal body text goes here.</p>
+
+            <ol>
+              <li class="h4" style="line-height:30px;">玩家Ａ擲出骰子，若骰出的數字不為１，則可將骰到的值累加到「當回合分數」。
+              <li class='h4' style="line-height:30px;">滑鼠點擊「Hold」，可將「當回合分數」加到總分上，並換玩家Ｂ行動。</li>
+
+              <li class="h4" style="line-height:30px;">若骰到１，則當回合分數歸零，並換玩家Ｂ行動，以此類推。</li>
+              <li class="h4" style="line-height:30px;">先累積１００分者獲勝</li>
+            </ol>
+
+            </p>
             <center>
-              <p style="margin-top: 50p;">create by <a href="https://github.com/qew4476">@State-yang</a></p>
+              <p style="margin-top: 70px;">create by <a href="https://github.com/qew4476">@State-yang</a></p>
             </center>
           </div>
           <div class="modal-footer">
@@ -106,8 +109,8 @@
     <!-- 玩家名稱 -->
     <div class="row text-center rounded playerID "
       style="background-color:rgba(218, 63, 158, 0.993); color:rgba(255, 248, 220, 0.884);border-radius: 25px; ">
-      <div class="col-md-6 h3 player1" id="name--0" style="height:25px;">玩家1</div>
-      <div class="col-md-6 h3 player2" id="name--1" style="height:25px;">玩家2</div>
+      <div class="col-md-6 h3 player1" id="name--0" style="height:25px;">玩家Ａ</div>
+      <div class="col-md-6 h3 player2" id="name--1" style="height:25px;">玩家Ｂ</div>
     </div>
     <div class="row h2 text-center" style="height: 30px;">
       總分
