--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
             </p>
             <center>
-              <p style="margin-top: 70px;">create by <a href="https://github.com/qew4476">@State-yang</a></p>
+              <p style="margin-top: 70px;">create by <a href="https://github.com/qew4476">@Shane-yang</a></p>
             </center>
           </div>
           <div class="modal-footer">
